--- a/src/pages/Heading.css
+++ b/src/pages/Heading.css
@@ -1,3 +1,4 @@
+/* C1210122 */
 body {
   padding: 0;
   margin: 0;
@@ -74,6 +75,7 @@ body {
     transition: color 0.3s, background-color 0.3s;
     /* border: 1px solid black; */
     padding: 5px 8px;
+    /* C1210122 */
     border-radius: 8px;
   }
   .header__nav a:hover {
@@ -89,7 +91,7 @@ body {
   .header__menu-toggle.open .bar:first-child {
     transform: translateY(8px) rotate(45deg);
   }
-  
+  /* C1210122 */
   .header__menu-toggle.open .bar:last-child {
     transform: translateY(-8px) rotate(-45deg);
   }
@@ -103,7 +105,9 @@ body {
   }
   
   /* Media Queries for smaller screens */
+/* C1210122 */
   @media screen and (max-width: 768px) {
+    /* Abuubakar Ciise */
     /* .header__menu-toggle {
       display: flex;
       flex-direction: column;
@@ -121,7 +125,7 @@ body {
     .header__nav {
       display: none;
     }
-  
+  /* Abuubakar Ciise */
     .header__nav.open {
       display: flex;
       flex-direction: column;
@@ -146,6 +150,7 @@ body {
     } */
     .header .header__menu-toggle{
         display: inline-block;
+      /* Abuubakar Ciise */
     }
     .header{
         display: flex;
