--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -1,9 +1,11 @@
+/* C1210122 */
 .contact-container {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 30vh;
   background-color: #f0f0f0;
+  /* Abuubakar Ciise */
 }
 
 .contact-info {
@@ -34,6 +36,7 @@
   justify-content: center;
   width: 4rem;
   height: 4rem;
+  /* C1210122 */
   border-radius: 50%;
   background-color: #eee;
   transition: background-color 0.3s ease-in-out;
