--- a/src/pages/Skills.css
+++ b/src/pages/Skills.css
@@ -1,3 +1,4 @@
+/* Abuubakar Ciise */
 .skill-container{
      /* border: 1px solid black; */
      max-width: 90%;
@@ -36,11 +37,13 @@
     flex-direction: column;
 } */
 .skill-cardss:hover{
+     /* Abuubakar Ciise */
     filter: drop-shadow(0px 2px 8px rgb(0, 0, 0));
     transition: filter 0.3s ease;
 
 }
 @media screen and (max-width: 768px) {
+     /* C1210122 */
     .skill-container{
         text-align: center;
         margin-left: 4%;
