--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,3 +1,4 @@
+/* C1210122 */
 .projects-container{
     /* border: 1px solid black; */
     max-width: 90%;
@@ -21,6 +22,7 @@ img {
 }
 .buttons{
     display: flex;
+    /* Abuubakar Ciise */
     justify-content: space-between;
 }
 .Projects-button{
@@ -30,13 +32,16 @@ img {
     border-radius: 16px;
     background-color: rgb(241, 215, 97);
     border: none;
+    /* C1210122 */
     cursor: pointer;
 }
 .Projects-button:hover{
     color:  rgb(241, 215, 97);
     background-color: black;
+    /* C1210122 */
 }
 @media screen and (max-width: 768px) {
+    /* Abuubakar Ciise */
     .projects-cards{
          text-align: center;
         margin-left: 5%;
