--- a/src/pages/AboutMe.css
+++ b/src/pages/AboutMe.css
@@ -1,3 +1,4 @@
+/* C1210122 */
 .about-container{
     width: 90%;
     margin: 0 auto;
@@ -35,9 +36,10 @@
     text-align: center;
     padding: 50px;
     margin-top: -40px;
-
+/* C1210122 */
 }
 @media screen and (max-width: 768px) {
+    /* C1210122 */
     .left-right{
         display: flex;
         flex-direction: column;
