--- a/src/pages/AboutMe.css
+++ b/src/pages/AboutMe.css
@@ -1,47 +1,54 @@
-/* C1210122 */
-.about-container{
-    width: 90%;
-    margin: 0 auto;
+.about-container {
     /* border: 1px solid black; */
-    margin-left: 4%;
-    margin-top: 100px;
-
-}
-.left-right{
-    /* border: 1px solid black; */
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
     max-width: 90%;
-    padding: 20px;
-    gap: 20px;
-    margin-left: 40px;
-   
-}
-.left{
-    flex: 1;
-    /* border: 1px solid black; */
+    margin-left: 4%;
+    padding: 50px;
 
-}
-.img img{
+  }
+  
+  .left-right {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; 
+    align-items: center; 
+    /* border: 1px solid black; */
+    padding: 50px;
+  }
+  
+  .left {
+    margin-right: 20px;
+    /* border: 1px solid black; */
+  }
+  .left img{
     width: 250px;
     height: 250px;
-}
+    border-radius: 8px;
+  }
 
-.right{
-    flex: 2;
+  .right{
     /* border: 1px solid black; */
-    text-align: center;
-    padding: 50px;
-    margin-top: -40px;
-/* C1210122 */
-}
-@media screen and (max-width: 768px) {
-    /* C1210122 */
-    .left-right{
-        display: flex;
-        flex-direction: column;
+    padding: 30px ;
+    width: 500px;
+    line-height: 1.5rem;
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .about-container{
+        margin-left: -2%;
     }
-}
+    .left-right {
+      flex-direction: column;
+      justify-content: center; 
+      align-items: center;
+    }
+  
+    .left {
+      margin-bottom: 10px;
+      margin-right: 0; 
+    }
+    .right{
+        max-width: 300px;
+    }
+    
+  }
+  
